// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles error action 1`] = `
Object {
  "error": true,
  "loading": false,
  "movies": null,
  "totalPages": null,
}
`;

exports[`handles load action 1`] = `
Object {
  "error": false,
  "loading": true,
  "movies": null,
  "totalPages": null,
}
`;

exports[`handles success print action 1`] = `
Object {
  "error": false,
  "loading": false,
  "movies": Array [
    Object {
      "id": 1,
      "poster_path": "/kqjL17yufvn9OVLyXYpvtyrFfak.jpg",
      "release_date": "2016-5-14",
      "title": "XMan",
      "vote_average": 7.8,
    },
    Object {
      "id": 2,
      "imageUrl": "/kqjL17yufvn9OVLyXYpvtyrFfak.jpg",
      "release_date": "2015-5-9",
      "title": "Superman",
      "vote_average": 0.9,
      "year": "2019",
    },
    Object {
      "id": 3,
      "imageUrl": "/kqjL17yufvn9OVLyXYpvtyrFfak.jpg",
      "release_date": "2005-5-27",
      "title": "Spiderman",
      "vote_average": 8,
      "year": "2019",
    },
  ],
  "totalPages": 15,
}
`;

exports[`returns the same state on an unhandled action 1`] = `
Object {
  "error": false,
  "loading": false,
  "movies": null,
  "totalPages": null,
}
`;
